# activist

./: .dockerignore  .editorconfig  .env.dev  .env.dev.example  .env.dev.local  .env.example  .gitignore  .i18n-check.yaml  .licenserc.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .ts-backend-check.yaml  BACKEND_TESTING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FRONTEND_TESTING.md  LLMPROMPT.txt  LOCALIZATION.md  NOTICE.txt  PRIVACY.txt  README.md  SECURITY.md  SETUP.md  STYLEGUIDE.md  TESTING_BASICS.md  TEST_ISSUES_ANALYSIS.md  activistcontribution.md  add_license_header.sh  create_event.json  create_group.json  create_org.json  crowdin.yml  docker-compose-prod.yml  docker-compose.e2e.yml  docker-compose.filescan_integration.yml  docker-compose.override.yml.example  docker-compose.presentation.yml  (+20 more)
backend/: .dockerignore  Dockerfile  README.md  REDIS_IMPLEMENTATION.md  assign_topics.py  complexipy-snapshot.json  conftest.py  deploy.Dockerfile  manage.py  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  resume.md  setup.py  sh.sh  test.py  tests.md
backend/apps/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/apps/migrations/: 0001_initial.py
backend/apps/users/: admin.py  apps.py  forms.py  models.py  serializers.py  views.py
backend/apps/views/: __init__.py  organizations.py
backend/authentication/: __init__.py  admin.py  apps.py  enums.py  factories.py  models.py  new.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_initial.py  __init__.py
backend/authentication/templates/: pwreset_email.html  signup_email.html
backend/authentication/tests/: __init__.py  test_admin.py  test_auth.py  test_auth_admin_forms.py  test_auth_create_user_and_superuser.py  test_auth_delete_user.py  test_auth_email_verification_get.py  test_auth_reset_pw.py  test_auth_serializers.py  test_auth_sign_in.py  test_auth_sign_out.py  test_auth_sign_up.py  test_auth_str_methods.py  test_auth_tasks.py  test_auth_verify_email.py  test_auth_verify_email_for_reset_pw.py  test_create_user_and_super.py  test_delete_user.py  test_reset_password.py  test_serializers.py  test_signin.py  test_signout.py  test_signup.py  test_verify_email.py  test_verify_email_for_pwreset.py
backend/backend/: .env.example  asgi.py  custom_settings.py  exception_handler.py  paginator.py  settings.py  urls.py  wsgi.py
backend/backend/mixins/: models.py
backend/common/: custom_filters.py
backend/communities/: admin.py  apps.py  factories.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/communities/groups/: factories.py  filters.py  models.py  serializers.py  views.py
backend/communities/organizations/: factories.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/communities/tests/: test_group.py  test_group_events.py  test_group_member.py  test_group_resource.py  test_group_text.py  test_group_topic.py
backend/config/: api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/content/: admin.py  apps.py  factories.py  factory.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/content/migrations/: 0001_initial.py  0002_initial.py  0003_tag_resourcetag.py
backend/content/tests/: test_disc_entry_create.py  test_disc_entry_delete.py  test_disc_entry_partial_update.py  test_disc_entry_update.py  test_discussion_create.py  test_discussion_delete.py  test_discussion_list.py  test_discussion_partial_update.py  test_discussion_retrieve.py  test_discussion_update.py  test_faq.py  test_faqs.py  test_flagEntity_create.py  test_image.py  test_image_upload.py  test_resource_create.py  test_resource_delete.py  test_resource_list.py  test_resource_partial_update.py  test_resource_retrieve.py  test_resource_update.py  test_social_links.py  tests.py
backend/contents/: apps.py  models.py
backend/core/: admin.py  asgi.py  custom_settings.py  exception_handler.py  internal_events.py  paginator.py  permissions.py  serializers.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/core/filescan/: __init__.py  filescan_client.py  scan_helpers.py
backend/core/tests/: conftest.py  test_clear_dev_images.py  test_internal_events.py  test_populate_db_command.py  test_swagger.py  test_throttling.py
backend/data/: presentation_data.json
backend/entities/: admin.py  apps.py  factories.py  factory.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/entities/migrations/: 0001_initial.py
backend/entities/tests/: test_group.py  test_group_events.py  test_group_member.py  test_group_resource.py  test_group_text.py  test_group_topic.py
backend/events/: __init__.py  admin.py  apps.py  factories.py  factory.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py  0002_alter_event_creation_date_alter_event_deletion_date_and_more.py
backend/events/tests/: test_api.py  test_event_admin_forms.py  test_event_api.py  test_event_cleaning.py  test_event_create.py  test_event_delete.py  (+20 more)
backend/fixtures/: iso_code_map.json  status_types.json  superuser.json  topics.json
backend/scripts/: clear_dev_images.py  clear_images.py  entrypoint.sh
backend/summary_docs/: fixture_test_schedule.md
backend/tests/: __init__.py  test_anon_throttle_swagger.py  test_api.py  test_base.py  test_clear_dev_images.py  test_database_wait_for_db_command.py  test_models.py  test_populate_db_command.py  test_throttle_endpoint.py  test_user_throttle_swagger.py  throttle.py
backend/utils/: generate_secret_key.py  malware_scan.py  malware_scanner.py  models.py  permissions.py  type_checker.py  utils.py  validate_pytest_structure.py
services/filescan/: CONTRIBUTING.md  CSAM_IMPLEMENTATION_NOTES.md  Dockerfile  INTEGRATION_NOTES.md  MALWARE_DETECTED_RUNBOOK.md  README.md  TESTING.md  entrypoint.sh  main.py  notification_helpers.py  pyproject.toml  requirements.txt  what-to-do-when-malware-shows-up.md
src/: main.rs  (+1 more)
(+2495 files in other folders)
