[package]
name = "activist"
version = "0.1.0"
authors = ["andrewtavis <andrew.t.mcallister@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10" }
serde = { version = "1.0.126" }
env_logger = "0.8"
log = "0.4.14"
derive_more = "0.99.14"
