[project]
name = "backend"
version = "0.0.1"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27.0",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-ical>=1.9.2",
    "django-stubs>=5.2.9",
    "django-stubs-ext>=5.2.9",
    "djangorestframework>=3.17.1",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.9",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.3.0",
    "icalendar>=7.0.3",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "i18n-check>=1.18.1",
    "mypy>=1.20.0",
    "numpydoc>=1.10.0",
    "prek>=0.3.8",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.9",
    "ts-backend-check>=1.4.4",
    "types-icalendar>=6.3.2.20260408",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "*/migrations/*.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
]

fixable = ["I"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds the following value.
max-complexity = 10

[tool.isort]
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = "test_*.py"
addopts = "--nomigrations"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "asgi.py",
    "wsgi.py",
    "manage.py",
    "*/__init__.py",
    "*/factories.py",
    "*/utils/type_checker/*",
]

[tool.mypy]
mypy_path = "backend"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
exclude = ["^.*/tests/.*\\.py$", "^.*/test_.*\\.py$", "^.*/.*_tests\\.py$"]

[[tool.mypy.overrides]]
module = ["authentication.*", "content.*", "communities.*", "events.*"]
# follow_imports = "skip"  # enable django-stubs
ignore_errors = false

[[tool.mypy.overrides]]
module = ["django_filters.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "ES01",
    "EX01",
    "SA01",
]

exclude = [
    "^.*\\.Meta$",    # meta classes
    "^.*\\.__str__$", # __str__ methods
    "^__init__$",     # __init__ files
    "^test_.*$",      # test files
    "^views.*$",      # test files
]
