# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "filescan-service"
version = "0.1.0"
description = "FastAPI-based file scanning service for activist."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1,<0.136",
    "python-multipart>=0.0.22",
    "pyclamd>=0.4.0",
    "uvicorn[standard]>=0.41.0,<0.42",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
