# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "filescan-service"
version = "0.1.0"
description = "FastAPI-based file scanning service for activist."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1,<0.136",
    "httpx>=0.27.0",
    "pyclamd>=0.4.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0,<0.42",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.6",
]
docs = [
    # Keep docs dependencies formatted in this way with ruff to allow for upgrades via VS Code extension.
    "numpydoc>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "ES01",
    "EX01",
    "SA01",
]

exclude = [
    "^.*\\.Meta$",    # meta classes
    "^.*\\.__str__$", # __str__ methods
    "^__init__$",     # __init__ files
]
