# SPDX-License-Identifier: AGPL-3.0-or-later
[project]
name = "filescan-service"
version = "0.1.0"
description = "FastAPI-based file scanning service for activist."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1,<0.136",
    "httpx>=0.27.0",
    "pyclamd>=0.4.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0,<0.42",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.6",
]
docs = [
    # Keep docs dependencies formatted in this way with ruff to allow for upgrades via VS Code extension.
    "numpydoc>=1.10.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "*/migrations/*.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "venv",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
]

fixable = ["I"]
unfixable = []

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds the following value.
max-complexity = 10

[tool.isort]
line_length = 88

[tool.pytest.ini_options]
python_files = "test_*.py"

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py"]

[tool.mypy]
mypy_path = "services/filescan"
explicit_package_bases = true
strict = true
exclude = ["^.*/tests/.*\\.py$", "^.*/test_.*\\.py$", "^.*/.*_tests\\.py$"]

[[tool.mypy.overrides]]
module = "pyclamd.*"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "ES01",
    "EX01",
    "SA01",
]

exclude = [
    "^.*\\.Meta$",    # meta classes
    "^.*\\.__str__$", # __str__ methods
    "^__init__$",     # __init__ files
]
